--- a/index.html
+++ b/index.html
@@ -33,94 +33,94 @@
     <td>
          Bootstrap Task 1
     </td>
-    <td><a href="Bootstrap Tasks/Task 1/index.html">Link 1</a></td>
+    <td><a href="Bootstrap/Task1/task1.html">Link 1</a></td>
 </tr>
 <tr>
     <td>
         Bootstrap Task 2
     </td>
-    <td><a href="Bootstrap Tasks/Task 2/index.html">Link 2</a></td>
+    <td><a href="Bootstrap/Task2/task2.html">Link 2</a></td>
 </tr>
 <tr>
     <td>
         Bootstrap Task 3
     </td>
-    <td><a href="Bootstrap Tasks/Task 3/index.html">Link 3</a></td>
+    <td><a href="Bootstrap/Task3/task3.html">Link 3</a></td>
 </tr>
 <tr>
     <td>
         Bootstrap Task 4
     </td>
-    <td><a href="Bootstrap Tasks/Task 4/index.html">Link 4</a></td>
+    <td><a href="Bootstrap/Task4/task4.html">Link 4</a></td>
 </tr>
 
 <tr>
     <td>
         Bootstrap Task 5
     </td>
-    <td><a href="Bootstrap Tasks/Task 5/index.html">Link 5</a></td>
+    <td><a href="Bootstrap/Task5/task5.html">Link 5</a></td>
 </tr>
 
 <tr>
     <td>
         Bootstrap Task 6
     </td>
-    <td><a href="Bootstrap Tasks/Task 6/index.html">Link 6</a></td>
+    <td><a href="Bootstrap/Task6/task6.html">Link 6</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 1
     </td>
-    <td><a href="JavaScript Tasks/Task 1/index.html">Link 7</a></td>
+    <td><a href="JavaScript/Task1/task1.html">Link 7</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 2
     </td>
-    <td><a href="JavaScript Tasks/Task 2/index.html">Link 8</a></td>
+    <td><a href="JavaScript/Task2/task2.html">Link 8</a></td>
 </tr>
 <tr>
     <td>
         Java Script Task 3
     </td>
-    <td><a href="JavaScript Tasks/Task 3/index.html">Link 9</a></td>
+    <td><a href="JavaScript/Task3/task3.html">Link 9</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 4
     </td>
-    <td><a href="JavaScript Tasks/Task 4/index.html">Link 10</a></td>
+    <td><a href="JavaScript/Task4/task4.html">Link 10</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 5
     </td>
-    <td><a href="JavaScript Tasks/Task 5/index.html">Link 11</a></td>
+    <td><a href="JavaScript/Task5/task5.html">Link 11</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 6
     </td>
-    <td><a href="JavaScript Tasks/Task 6/index.html">Link 12</a></td>
+    <td><a href="JavaScript/Task6/task6.html">Link 12</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 7
     </td>
-    <td><a href="JavaScript Tasks/Task 7/index.html">Link 13</a></td>
+    <td><a href="JavaScript/Task7/task7.html">Link 13</a></td>
 </tr>
 
 <tr>
     <td>
         Java Script Task 8
     </td>
-    <td><a href="JavaScript Tasks/Task 8/index.html">Link 14</a></td>
+    <td><a href="JavaScript/Task8/task8.html">Link 14</a></td>
 </tr>
 
     </table>
