--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </table>
 
 <footer>
-    <p>Created by Karanki Chiranjeevi  | Registration Number: 21BCE2931</p>
+    <p>Created by Priyanshu Joarder  | Registration Number: 21BDS0083 </p>
 </footer>
 
 </center>
