--- a/index.html
+++ b/index.html
@@ -1,134 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasks Index</title>
     <style>
-        body{
-            background-color: rgb(113, 208, 208);
-            font-family:cursive;
-        }
-        table{
-            border: 2px solid #000;
-            width:30%;
-            background-color: #FFEFD5;
-            
-        }
-        tr,td{
-            border: 1.5px solid;
-            text-align: center;
-        }
+      body {
+        background-color: rgb(113, 208, 208);
+        font-family: cursive;
+      }
+      table {
+        border: 2px solid #000;
+        width: 30%;
+        background-color: #ffefd5;
+      }
+      tr,
+      td {
+        border: 1.5px solid;
+        text-align: center;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1><center>Index page</center></h1>
     <center>
-    <table border="1"  bordercolor="black" cellspacing="0">
+      <table border="1" bordercolor="black" cellspacing="0">
         <tr>
-            <th>Tasks</th>
-            <th>Links</th>
+          <th>Tasks</th>
+          <th>Links</th>
         </tr>
-<tr>
-    <td>
-         Bootstrap Task 1
-    </td>
-    <td><a href="Bootstrap/Task1/task1.html">Link 1</a></td>
-</tr>
-<tr>
-    <td>
-        Bootstrap Task 2
-    </td>
-    <td><a href="Bootstrap/Task2/task2.html">Link 2</a></td>
-</tr>
-<tr>
-    <td>
-        Bootstrap Task 3
-    </td>
-    <td><a href="Bootstrap/Task3/task3.html">Link 3</a></td>
-</tr>
-<tr>
-    <td>
-        Bootstrap Task 4
-    </td>
-    <td><a href="Bootstrap/Task4/task4.html">Link 4</a></td>
-</tr>
+        <tr>
+          <td>Bootstrap Task 1</td>
+          <td><a href="Bootstrap/Task1/task1.html">Link 1</a></td>
+        </tr>
+        <tr>
+          <td>Bootstrap Task 2</td>
+          <td><a href="Bootstrap/Task2/task2.html">Link 2</a></td>
+        </tr>
+        <tr>
+          <td>Bootstrap Task 3</td>
+          <td><a href="Bootstrap/Task3/task3.html">Link 3</a></td>
+        </tr>
+        <tr>
+          <td>Bootstrap Task 4</td>
+          <td><a href="Bootstrap/Task4/task4.html">Link 4</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Bootstrap Task 5
-    </td>
-    <td><a href="Bootstrap/Task5/task5.html">Link 5</a></td>
-</tr>
+        <tr>
+          <td>Bootstrap Task 5</td>
+          <td><a href="Bootstrap/Task5/task5.html">Link 5</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Bootstrap Task 6
-    </td>
-    <td><a href="Bootstrap/Task6/task6.html">Link 6</a></td>
-</tr>
+        <tr>
+          <td>Bootstrap Task 6</td>
+          <td><a href="Bootstrap/Task6/task6.html">Link 6</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 1
-    </td>
-    <td><a href="JavaScript/Task1/task1.html">Link 7</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 1</td>
+          <td><a href="JavaScript/Task1/task1.html">Link 7</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 2
-    </td>
-    <td><a href="JavaScript/Task2/task2.html">Link 8</a></td>
-</tr>
-<tr>
-    <td>
-        Java Script Task 3
-    </td>
-    <td><a href="JavaScript/Task3/task3.html">Link 9</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 2</td>
+          <td><a href="JavaScript/Task2/task2.html">Link 8</a></td>
+        </tr>
+        <tr>
+          <td>Java Script Task 3</td>
+          <td><a href="JavaScript/Task3/task3.html">Link 9</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 4
-    </td>
-    <td><a href="JavaScript/Task4/task4.html">Link 10</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 4</td>
+          <td><a href="JavaScript/Task4/task4.html">Link 10</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 5
-    </td>
-    <td><a href="JavaScript/Task5/task5.html">Link 11</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 5</td>
+          <td><a href="JavaScript/Task5/task5.html">Link 11</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 6
-    </td>
-    <td><a href="JavaScript/Task6/task6.html">Link 12</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 6</td>
+          <td><a href="JavaScript/Task6/task6.html">Link 12</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 7
-    </td>
-    <td><a href="JavaScript/Task7/task7.html">Link 13</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 7</td>
+          <td><a href="JavaScript/Task7/task7.html">Link 13</a></td>
+        </tr>
 
-<tr>
-    <td>
-        Java Script Task 8
-    </td>
-    <td><a href="JavaScript/Task8/task8.html">Link 14</a></td>
-</tr>
+        <tr>
+          <td>Java Script Task 8</td>
+          <td><a href="JavaScript/Task8/task8.html">Link 14</a></td>
+        </tr>
+      </table>
 
-    </table>
-
-<footer>
-    <p>Created by Priyanshu Joarder  | Registration Number: 21BDS0083 </p>
-</footer>
-
-</center>
-</body>
+      <footer>
+        <p>Created by Priyanshu Joarder | Registration Number: 21BDS0083</p>
+      </footer>
+    </center>
+  </body>
 </html>
